--- a/requirements.txt
+++ b/requirements.txt
@@ -83,7 +83,7 @@ tzdata==2025.2
 urllib3==2.5.0
 xxhash==3.5.0
 yarl==1.20.1
-pinecone-client==3.2.2
+pinecone-client>=2.2.4,<3.0.0
 fastapi==0.104.1
 uvicorn==0.24.0
 scikit-learn==1.3.2
